# aneditor

./: CMakeLists.txt
res/projectTemplate/: CMakeLists.txt  README.md  ch2dutil.py
res/projectTemplate/src/: main.cpp
src/: Component.cpp  Component.hpp  ImGuiTheme.hpp  Property.cpp  Property.hpp  Template.cpp  Template.hpp  TemplateInstance.hpp  main.cpp  utils.cpp  utils.hpp
src/window/: ComponentsWindow.cpp  ComponentsWindow.hpp  EditorSettings.cpp  EditorSettings.hpp  MenuBar.cpp  MenuBar.hpp  TemplatesWindow.cpp  TemplatesWindow.hpp  TilesWindow.cpp  TilesWindow.hpp  WorldWindow.cpp  WorldWindow.hpp
